[project]
name = "graphrag-query"
version = "1.0.0"
description = ""
authors = [
    { name = "6ixGODD", email = "6godddddddd@gmail.com" }
]
readme = "README.md"
requires-python = "^3.11,<3.13"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openai (>=1.69.0,<2.0.0)",
    "typing-extensions (>=4.13.0,<5.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "json-repair (>=0.40.0,<0.41.0)",
    "lancedb (>=0.21.2,<0.22.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[project.optional-dependencies]
openai-server = ["fastapi (>=0.115.12,<0.116.0)", "uvicorn (>=0.34.0,<0.35.0)", "tabulate (>=0.9.0,<0.10.0)", "loguru (>=0.7.3,<0.8.0)"]
gui = ["pyqt6 (>=6.8.1,<7.0.0)", "markdown (>=3.7,<4.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
